[package]
name = "rsglobe"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "*", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_pbr",
    "bevy_winit",
    "multi_threaded",
    "tonemapping_luts",
    "dynamic_linking",
    "png",
    "jpeg",
] }
smooth-bevy-cameras = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
