[package]
name = "rsglobe"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "*", default-features = false, features = [
    "android-native-activity",
    "bevy_asset",
    "bevy_render",
    "bevy_pbr",
    "bevy_winit",
    "multi_threaded",
    "tonemapping_luts",
    "dynamic_linking",
    "png",
    "jpeg",
] }
smooth-bevy-cameras = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[lib]
name = "rsglobe"
crate-type = ["rlib", "cdylib"]

[package.metadata.android]
package = "fi.orkas.rsglobe"

[package.metadata.android.sdk]
min_sdk_version = 34
target_sdk_version = 34

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.signing.release]
path = "/Users/rikshot/.android/debug.keystore"
keystore_password = "android"
